Fixed default safety (without authorization)